treesitter/grammar.js
    source_file: $ => repeat($._statement),

    // ── Statements ────────────────────────────────────────────────────────

    /**
     * `<attribute>* <definition>`. The attributes belong to the definition
     * after them, and appear as its preceding siblings: every kind of
     * definition may carry them, so they are read here, once, rather than
     * inside each of the five. A block's `let` is read by `do_block` directly
     * and so takes none, the way `parse.rs` refuses them there.
     */
    _statement: $ => seq(
      repeat($.attribute),
      choice(
        $.extern_definition,
        $.let_definition,
        $.type_definition,
        $.effect_definition,
        $.module_definition,
        $.using_statement,
      ),
    ),

    /**
     * `@key` or `@key <literal>` — one entry of a definition's metadata. The
     * value is literal data: nothing that begins a definition begins a
     * literal, so whether one follows the key is never in doubt.
     */
    attribute: $ => prec.right(seq(
      field('key', $.attribute_key),
      optional(field('value', $._data)),
    )),

    /**
     * Literal data, and only that: the scalars, a tag with an optional literal
     * payload, and tuples, arrays, and structs of these. Mirrors
     * `Parser::data` — no name, no application, no operator, no spread.
     */
    _data: $ => choice(
      $.natural,
      $.string,
      $.boolean,
      $.unit,
      $.data_tuple,
      $.data_array,
      $.data_struct,
      $.data_tag,
      $.parenthesized_data,
    ),

    parenthesized_data: $ => seq('(', $._data, ')'),

    /** `(a, b)`, or `(a,)` — a comma is what makes a tuple of one. */
    data_tuple: $ => seq(
      '(',
      field('element', $._data),
      ',',
      optional(seq(
        sepBy1(',', field('element', $._data)),
        optional(','),
      )),
      ')',
    ),

    data_array: $ => seq(
      '[',
      optional(seq(
        sepBy1(',', field('element', $._data)),
        optional(','),
      )),
      ']',
    ),

    data_struct: $ => seq(
      '{',
      optional(seq(
        sepBy1(',', $.data_field),
        optional(','),
      )),
      '}',
    ),

    data_field: $ => seq(
      field('name', fieldLabel($)),
      ':',
      field('value', $._data),
    ),

    /** `#Some 1n`, or a bare `#None` — greedy, as an expression's tag is. */
    data_tag: $ => prec.right(seq(
      field('name', $.tag),
      optional(field('payload', $._data)),
    )),

    /**
     * `module A = <stmts> end`, or `module A` for a module whose body is
     * another file.
     *
     * One rule for the two forms, told apart by whether a body was written:
     * the bare form names a file to read, and the body it stands for is
     * spliced in long before anything downstream can tell the difference. The
     * body may be empty — `module A = end` declares a module with nothing in
     * it and is legal.
     */
    module_definition: $ => seq(
      'module',
      field('name', $.identifier),
      optional(seq('=', repeat($._statement), 'end')),
    ),

    /** `extern <name> : <annotation> = <target>` — a target-provided value. */
    extern_definition: $ => seq(
      'extern',
      field('name', $.identifier),
      ':',
      field('type', $.extern_annotation),
      '=',
      field('target', $.string),
    ),

    /** The extern-only ABI type plus its ordinary outer `where` clause. */
    extern_annotation: $ => seq(
      field('type', $._extern_type),
      optional(field('clause', $.where_clause)),
    ),

    _extern_type: $ => choice(
      $.annotated_extern_type,
      $.extern_function_type,
      $.parenthesized_extern_function_type,
      $._type,
    ),

    let_definition: $ => seq(
      choice(
        seq('let', field('pattern', $._pattern)),
        field('pattern', $.wildcard),
      ),
      optional(seq(':', field('type', $.annotation))),
      '=',
      field('body', $._expression),
    ),

    /**
     * `type <name> <'param>* = <annotation>`
     *
     * The parameters are variables, and wear the `'` an annotation's variable
     * does: a bare name in a type resolves to something declared elsewhere, and
     * a parameter resolves to whatever the use site hands it.
     */
    type_definition: $ => seq(
      'type',
      field('name', $.identifier),
      repeat(field('parameter', $.type_variable)),
      '=',
      field('body', $.annotation),
    ),

    /**
     * Empty, alias, unnamed singleton, and named closed-interface effects.
     *
     * The parameters are the ones a `type` declaration binds, written the
     * same way: `effect Ask 'a = { get: () -> 'a }` takes one, and every row
     * naming `!Ask` hands it an argument.
     */
    effect_definition: $ => seq(
      'effect',
      field('name', $.identifier),
      repeat(field('parameter', $.type_variable)),
      optional(seq('=', field('body', choice(
        prec(1, $.effect_alias_union),
        $._effect_operation_signature,
        $.named_effect_interface,
      )))),
    ),

    /**
     * `!Ask 'a + !Log + ..'e` — the row an alias stands for: applications of
     * other effects, and at most one tail naming a declared parameter.
     */
    effect_alias_union: $ => $._effect_alias_row,

    _effect_alias_row: $ => choice(
      $.rest,
      prec.right(seq($.effect_alias, optional(seq('+', $._effect_alias_row)))),
    ),

    _effect_operation_signature: $ => choice(
      $.function_type,
      $.parenthesized_effect_operation_signature,
    ),

    effect_alias: $ => prec(2, seq(
      field('name', choice($.effect_label, $.effect_path)),
      repeat(field('argument', $._type_atom)),
    )),

    // ── Paths ─────────────────────────────────────────────────────────────

    // The `Math::` segments in front of a name, outermost first. One rule for
    // both kinds of path, so that reading a prefix commits to neither:
    // `Sys::Inner::!Log` and `Sys::Inner::zero` are the same up to the sigil,
    // and a parser that guessed at the first `::` would have to take the guess
    // back at the last one.
    _expression: $ => choice(
      $.match_function,
      $.function,
      $.raise_expression,
      $.assignment,
      $.pipeline,
      $._boolean_or,
    ),

    _application_expression: $ => choice(
      $.application,
      $._head_expression,
    ),

    /**
     * The expressions an application may be built from. An `if`, `match`,
     * `handle`, or `do` reaches here — each may be applied and projected off —
     * but none begins an argument, which is what keeps `f match ... end` from
     * being an application of `f`.
     */
    application: $ => prec.left(PREC.application, seq(
      field('function', $._application_expression),
      field('argument', $._argument),
    )),

    /**
     * What may follow a function without parentheses around it: the atoms
     * `Parser::at_expr_atom` lists, whatever is projected off one of them, and
     * a `fn`, whose body then runs to the end of the application.
     */
    _argument: $ => choice(
      $._argument_atom,
      alias($._atom_projection, $.projection),
      $.match_function,
      $.function,
    ),

    // A projection whose base is an atom rather than a `match` or a `handle`,
    // since neither of those begins an argument. The same node as
    // [`projection`], reached from the one position that narrows what it may
    // be read off.
    function: $ => prec.right(seq(
      'fn',
      repeat1(field('parameter', choice($.identifier, $.wildcard))),
      '=>',
      field('body', $._expression),
    )),

    /** `fn | <pattern> => <expr> (| <pattern> => <expr>)*`. */
    do_block: $ => seq(
      'do',
      repeat(field('statement', choice($.let_definition, $.using_statement))),
      optional(seq('return', field('value', $._expression))),
      'end',
    ),

    /**
     * `if <condition> then <expr> (else if <condition> then <expr>)*
     * else <expr> end`.
     *
     * An else-if chain is one expression with one final `end`; individual
     * arms deliberately have no terminator of their own.
     */
    if_expression: $ => seq(
      'if',
      field('condition', $._expression),
      'then',
      field('consequent', $._expression),
      repeat(field('else_if', $.else_if_arm)),
      'else',
      field('alternative', $._expression),
      'end',
    ),

    // Prefer closing an arm when another `else` arrives. A nested `if` in an
    // arm still owns its `else` because its required `end` makes that reading
    // unambiguous once the rest of the input is seen.
    struct_expression: $ => seq('{', optional($._struct_items), '}'),

    _struct_items: $ => choice(
      seq($.spread, optional(',')),
      seq($.struct_field, optional(seq(',', optional($._struct_items)))),
    ),

    operation: $ => choice(
      prec(1, seq(
        field('effect', choice($.effect_label, $.effect_path)),
        '.',
        field('name', $.identifier),
      )),
      field('effect', choice($.effect_label, $.effect_path)),
    ),

    /** Positional structs permit one trailing spread. */
    array_expression: $ => seq(
      '[',
      optional(seq(
        field('element', $._array_item),
        repeat(seq(',', field('element', $._array_item))),
        optional(','),
      )),
      ']',
    ),

    _array_item: $ => choice($.spread, $._expression),

    /** `..a` — the values of an array, spread into the literal around it. */
    _pattern: $ => choice(
      $.identifier,
      $.wildcard,
      $.natural,
      $.string,
      $.boolean,
      $.unit,
      $.struct_pattern,
      $.tuple_pattern,
      $.array_pattern,
      $.tag_pattern,
      $.hidden_pattern,
      $.parenthesized_pattern,
    ),

    /** `{ x, y: <pattern>, .. }`, with an optional trailing comma. */
    annotation: $ => seq(
      field('type', $._type),
      optional(field('clause', $.where_clause)),
    ),

    _type: $ => choice($.hidden_type, $.function_type, $._type_sum),

    /**
     * `hide 'a => <type>` — a hidden type. The body extends as far right as
     * it can, the way a lambda's does, so it takes the whole arrow after it
     * and needs parentheses as an arrow's input or an application's argument;
     * `Parser::arrow` reads it above the arrow for the same reason.
     */
    function_type: $ => prec.right(seq(
      field('from', $._type_sum),
      '->',
      field('to', $._type),
      optional(field('effects', $.effect_row)),
    )),

    _type_sum: $ => choice($.sum_type, $.effect_type, $._type_application),

    /**
     * `[|] <case> ('|' <case>)* ['|' ..[<rest>]]` — a sum, as the cases it
     * allows. `|` alone is the sum with no cases at all.
     */
    sum_type: $ => choice(
      seq('|', optional($._sum_body)),
      $._sum_cases,
    ),

    // A row that is nothing but its tail is read as an effect row unless a
    // leading `|` says otherwise, which is why only this branch reaches `rest`
    // with no case in front of it.
    _sum_body: $ => choice(
      $.rest,
      $._sum_cases,
      prec.right(seq($.fixed_type_spread, optional(seq('|', $._sum_body)))),
    ),

    // Right-associative, so a sum written as an operation's signature takes
    // every `|` after it — `effect E = op : #A | #B` declares one operation
    // returning a two-case sum, exactly as `Parser::type_sum` reads it.
    _sum_cases: $ => prec.right(seq(
      choice($.sum_case, $.absent_case),
      optional(seq('|', $._sum_body)),
    )),

    /** `#Some (when 'a) T` — a case a value may be, carrying this when it is. */
    sum_case: $ => seq(
      field('name', $.tag),
      optional(field('when', $.parenthesized_when)),
      optional(field('payload', $._type_atom)),
    ),

    /** `\#None` — the case is definitely not there. */
    effect_type: $ => $._effect_row_body,

    /** `+ !Log + !IO`, or `+ |` for the row that allows nothing. */
    effect_row: $ => seq('+', choice('|', $._effect_row_body)),

    _effect_row_body: $ => choice($.rest, $._effect_row_cases),

    // Right-associative, so a row written as an arrow's result takes every `+`
    // after it: `A -> !Log + !IO` hands the parameter both effects rather than
    // hanging the second one off the arrow.
    effect_case: $ => seq(
      field('name', choice($.effect_label, $.effect_path)),
      repeat(field('argument', $._type_atom)),
      optional(field('when', $.parenthesized_when)),
    ),

    /** `\!Log`, or `\!Ask Nat` — the effect is definitely not performed. */
    absent_effect: $ => seq(
      '\\',
      field('name', choice($.effect_label, $.effect_path)),
      repeat(field('argument', $._type_atom)),
    ),

    /** `Pair Nat Nat` — a type applied to arguments, gathered flat. */
    type_application: $ => prec.left(seq(
      field('head', $._type_atom),
      repeat1(field('argument', $._type_atom)),
    )),

    _type_atom: $ => choice(
      $.boolean,
      $.identifier,
      $.path,
      $.type_variable,
      $.hole,
      $.unit,
      $.struct_type,
      $.array_type,
      $.mut_type,
      $.tuple_type,
      $.parenthesized_type,
    ),

    /** `{ x: Nat, y when 'a: Nat, \z, ..'r }`, with an optional trailing comma. */
    struct_type: $ => seq('{', optional($._struct_type_body), '}'),

    _struct_type_body: $ => choice(
      $.rest,
      seq(
        choice($.struct_type_field, $.absent_field, $.fixed_type_spread),
        optional(seq(',', optional($._struct_type_body))),
      ),
    ),

    /** A fixed named row; applications are parenthesized. */
    struct_type_field: $ => seq(
      field('name', fieldLabel($)),
      optional(field('when', $.when_clause)),
      ':',
      field('type', $._type),
    ),

    /** `\name` — the label is definitely not there. */
    rest: $ => seq('..', optional(field('name', $.type_variable))),

    /** `when 'a`, or the `when _` that no formula may name. */
    when_clause: $ => seq('when', field('name', choice($.type_variable, $.wildcard))),

    /** The same clause where there is no colon to end it: `(when 'a)`. */
    parenthesized_when: $ => seq('(', $.when_clause, ')'),

    /** `(A, B)` — a closed positional struct type. */
    tuple_type: $ => seq(
      '(',
      field('element', $._type),
      ',',
      optional(seq(
        field('element', $._type),
        repeat(seq(',', field('element', $._type))),
        optional(','),
      )),
      ')',
    ),

    /** `[T]` — the type of immutable homogeneous arrays of `T`. */
    array_type: $ => seq('[', field('element', $._type), ']'),

    parenthesized_type: $ => seq('(', $._type, ')'),

    // ── `where` clauses ───────────────────────────────────────────────────

    where_clause: $ => seq('where', sepBy1(';', $._clause)),

    _clause: $ => choice($.clause_comparison, $._clause_or),

    /** `a = b` or `a != b`. Non-associative: `a = b = c` has no reading. */
    unit: _ => seq('(', ')'),

    /** `_` — a value being thrown away. */
    wildcard: _ => '_',

    /** `_` in a type: a position left for inference to decide. */
    hole: _ => '_',

    identifier: _ => new RegExp(IDENT.source, 'u'),

    /**
     * `#Some` or `#"some case"` — one case of a sum, named. A quoted tag is
     * one token so whitespace may not separate its `#` from the opening quote.
     */
    tag: _ => choice(
      new RegExp(TAG.source, 'u'),
      token(seq('#', '"', repeat(choice(/[^"\\\n]/, /\\["\\nrt]/)), '"')),
    ),

    /** `!Log` — an effect, named. The `!` is not part of the name. */
    effect_label: _ => new RegExp(EFFECT.source, 'u'),

    /** `@deprecated` — an attribute's key. The `@` is not part of the name. */
    attribute_key: _ => new RegExp(ATTRIBUTE.source, 'u'),

    /**
     * `'a` — a variable: the parameter of the declaration it is written in, or
     * a variable of the annotation it is written in.
     */
    boolean: _ => choice('true', 'false'),

    /**
     * `--`, running to the end of its line. Mirrors `token::line_comment`.
     */
