treesitter/test/corpus/bounded_presence.txt
================================================================================
Bounded field, tuple, variant, and effect presences
================================================================================

let f: { x when <= 'p: Nat, y when 'p: String }
  -> (Nat when <= 'p,)
  -> (#Some (when <= 'p) Nat | #None)
  + !Log (when <= 'p) = value

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (annotation
      (function_type
        (struct_type
          (struct_type_field
            (identifier)
            (when_clause
              (type_variable))
            (identifier))
          (struct_type_field
            (identifier)
            (when_clause
              (type_variable))
            (identifier)))
        (function_type
          (tuple_type
            (marked_tuple_type_element
              (identifier)
              (when_clause
                (type_variable))))
          (parenthesized_type
            (sum_type
              (sum_case
                (tag)
                (parenthesized_when
                  (when_clause
                    (type_variable)))
                (identifier))
              (sum_case
                (tag))))
          (effect_row
            (effect_case
              (effect_label)
              (parenthesized_when
                (when_clause
                  (type_variable))))))))
    (identifier)))
